# hyag

./: .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/: hyag.md
config/: dictionaries.json
examples/: claude_code_usage.py  example_usage.py  external_project_usage.py  ollama_usage.py
hyag/: agent_client.py  bridge.py  cli.py  translation_service.py  translator.py
src/: __init__.py  bridge.py  llm_client.py  translation_service.py  validator.py
tests/: test_basic.py
tools/: hyag_cli.py
